--- a/LongoToDo/LongoToDo/LongoToDo.iOS/LongoToDo.iOS.csproj
+++ b/LongoToDo/LongoToDo/LongoToDo.iOS/LongoToDo.iOS.csproj
@@ -68,6 +68,7 @@
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Renderer\CustomEntryRenderer.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
@@ -132,5 +133,8 @@
       <Project>{1CE1B7E3-23DC-4E27-BCBD-6A73F00DA3F7}</Project>
       <Name>LongoToDo</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Renderer\" />
   </ItemGroup>
 </Project>
